# sawyer_aim

./: CMakeLists.txt  package.xml
launch/: sawyer_with_table.launch  sawyer_world.launch
models/cafe_table/: model.sdf
models/cylinder/: model.sdf
models/kinect_ros/: model.config  model.sdf
scripts/: load_model.py  manual_control.py
worlds/: aim_sawyer.world
