<?xml version="1.0"?>
<package>
  <name>sawyer_aim</name>
  <version>0.0.0</version>
  <description>The sawyer_aim package</description>

  <maintainer email="tungluu2203@kaist.ac.kr">tung</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>intera_core_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rospack</run_depend>
  <run_depend>intera_core_msgs</run_depend>
  <run_depend>intera_interface</run_depend>
  <run_depend>sawyer_gazebo</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  
  <export>
	<gazebo_ros gazebo_model_path="./models"/>
    <gazebo_ros gazebo_media_path="./models"/>
  </export>
</package>
